--- a/PROJECT2_ETL.ipynb
+++ b/PROJECT2_ETL.ipynb
@@ -507,14 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1.) You first need to create a dataframe within your local SQL enviroment (TIP: To make it easier name the DF in SQL \"NYSE\")\n",
     "# 2.) This Code Pushes Fund_Stock_DF_Cleaned Dataframe into SQL.\n",
     "# 3.) Also, Please make sure you Change (password=\"Google123\") to your password.\n",
-    "# 4.) Everything else should work Minus the Primary Key... For some reason when I update as (\"Ticker Symbol\" text PRIMARY KEY,) It fails out.\n",
     "\n",
     "\n",
     "import psycopg2 as pg2\n",
@@ -523,9 +522,9 @@
     "    cur = conn.cursor()\n",
     "    cur.execute(\"\"\"\n",
     "    CREATE TABLE \"securities_DF_Cleaned\"(\n",
-    "    id integer PRIMARY KEY,\n",
+    "    \"Ticker symbol\" text PRIMARY KEY,\n",
     "    Security text,\n",
-    "    \"Total Equity\" text);\n",
+    "    \"GICS Sector\" text);\n",
     "    \"\"\")\n",
     "    conn.commit()\n",
     "except:\n",
@@ -534,25 +533,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unable to Connect\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1.) This Code Pushes Fund_Stock_DF_Cleaned Dataframe into SQL.\n",
     "# 2.) Also, Please make sure you Change (password=\"Google123\") to your password.\n",
-    "# 3.) Everything else should work Minus the Primary Key... For some reason when I use (id integer PRIMARY KEY,) the Table is created.\n",
     "\n",
-    "\n",
-    "\n",
-    "'Ticker Symbol', 'Period Ending', 'Total Equity', 'Cash Ratio'\n",
     "import psycopg2 as pg2\n",
     "try:\n",
     "    conn = pg2.connect(dbname=\"NYSE\", user=\"postgres\", password=\"Google123\")\n",
@@ -571,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,16 +575,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['TableETL']"
+       "['securities_DF_Cleaned', 'Fund_Stock_DF_Cleaned']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,11 +602,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_customer_location_df.to_sql(name=\"TableETL\", con=engine, if_exists='append', index=False)"
+    "securities_DF_Cleaned.to_sql(name=\"NYSE\", con=engine, if_exists='append', index=False)"
    ]
   },
   {
@@ -635,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new_customer_location_df.to_sql(name='customer_location', con=engine, if_exists='append', index=False)"
+    "Fund_Stock_DF_Cleaned.to_sql(name=\"NYSE\", con=engine, if_exists='append', index=False)"
    ]
   },
   {
@@ -655,87 +642,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>address</th>\n",
-       "      <th>us_state</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>043 Mockingbird Place</td>\n",
-       "      <td>Indiana</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4 Prentice Point</td>\n",
-       "      <td>Indiana</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>46 Derek Junction</td>\n",
-       "      <td>Texas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>11966 Old Shore Place</td>\n",
-       "      <td>Missouri</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5 Evergreen Circle</td>\n",
-       "      <td>New York</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id                address  us_state\n",
-       "0   1  043 Mockingbird Place   Indiana\n",
-       "1   2       4 Prentice Point   Indiana\n",
-       "2   3      46 Derek Junction     Texas\n",
-       "3   4  11966 Old Shore Place  Missouri\n",
-       "4   5     5 Evergreen Circle  New York"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_sql_query('select * from \"TableETL\"', con=engine).head()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -746,86 +656,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>address</th>\n",
-       "      <th>us_state</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>043 Mockingbird Place</td>\n",
-       "      <td>Indiana</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4 Prentice Point</td>\n",
-       "      <td>Indiana</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>46 Derek Junction</td>\n",
-       "      <td>Texas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>11966 Old Shore Place</td>\n",
-       "      <td>Missouri</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5 Evergreen Circle</td>\n",
-       "      <td>New York</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id                address  us_state\n",
-       "0   1  043 Mockingbird Place   Indiana\n",
-       "1   2       4 Prentice Point   Indiana\n",
-       "2   3      46 Derek Junction     Texas\n",
-       "3   4  11966 Old Shore Place  Missouri\n",
-       "4   5     5 Evergreen Circle  New York"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd.read_sql_query('select * from \"TableETL\"', con=engine).head()"
+    "\n"
    ]
   },
   {
