Cleaned up code for PostgreSQL uploads

--- a/PROJECT2_ETL.ipynb
+++ b/PROJECT2_ETL.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine"
+    "from sqlalchemy import create_engine\n",
+    "from config import username, password"
    ]
   },
   {
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +141,7 @@
        "4   718877  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -376,7 +377,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -426,6 +427,8 @@
        "      <th>Period Ending</th>\n",
        "      <th>Total Equity</th>\n",
        "      <th>Cash Ratio</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "      <th>For Year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -435,6 +438,8 @@
        "      <td>2012-12-31</td>\n",
        "      <td>-7.987000e+09</td>\n",
        "      <td>53.0</td>\n",
+       "      <td>2.485500e+10</td>\n",
+       "      <td>2012.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -442,6 +447,8 @@
        "      <td>2013-12-31</td>\n",
        "      <td>-2.731000e+09</td>\n",
        "      <td>75.0</td>\n",
+       "      <td>2.674300e+10</td>\n",
+       "      <td>2013.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -449,6 +456,8 @@
        "      <td>2014-12-31</td>\n",
        "      <td>2.021000e+09</td>\n",
        "      <td>60.0</td>\n",
+       "      <td>4.265000e+10</td>\n",
+       "      <td>2014.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -456,6 +465,8 @@
        "      <td>2015-12-31</td>\n",
        "      <td>5.635000e+09</td>\n",
        "      <td>51.0</td>\n",
+       "      <td>4.099000e+10</td>\n",
+       "      <td>2015.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -463,21 +474,30 @@
        "      <td>2012-12-29</td>\n",
        "      <td>1.210694e+09</td>\n",
        "      <td>23.0</td>\n",
+       "      <td>6.205003e+09</td>\n",
+       "      <td>2012.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Ticker Symbol Period Ending  Total Equity  Cash Ratio\n",
-       "0           AAL    2012-12-31 -7.987000e+09        53.0\n",
-       "1           AAL    2013-12-31 -2.731000e+09        75.0\n",
-       "2           AAL    2014-12-31  2.021000e+09        60.0\n",
-       "3           AAL    2015-12-31  5.635000e+09        51.0\n",
-       "4           AAP    2012-12-29  1.210694e+09        23.0"
+       "  Ticker Symbol Period Ending  Total Equity  Cash Ratio  Total Revenue  \\\n",
+       "0           AAL    2012-12-31 -7.987000e+09        53.0   2.485500e+10   \n",
+       "1           AAL    2013-12-31 -2.731000e+09        75.0   2.674300e+10   \n",
+       "2           AAL    2014-12-31  2.021000e+09        60.0   4.265000e+10   \n",
+       "3           AAL    2015-12-31  5.635000e+09        51.0   4.099000e+10   \n",
+       "4           AAP    2012-12-29  1.210694e+09        23.0   6.205003e+09   \n",
+       "\n",
+       "   For Year  \n",
+       "0    2012.0  \n",
+       "1    2013.0  \n",
+       "2    2014.0  \n",
+       "3    2015.0  \n",
+       "4    2012.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,12 +510,13 @@
     "\n",
     "\n",
     "# Dataframe 1\n",
-    "securities_DF_Cleaned = securities[['Ticker symbol', 'Security', 'GICS Sector']].copy()\n",
-    "securities_DF_Cleaned.head()\n",
+    "Securities_DF_Cleaned = securities[['Ticker symbol', 'Security', 'GICS Sector', 'GICS Sub Industry']]\n",
+    "Securities_DF_Cleaned = Securities_DF_Cleaned.rename(columns={'Ticker symbol': 'Ticker Symbol'})\n",
+    "Securities_DF_Cleaned.head()\n",
     "\n",
     "# Dataframe 2\n",
-    "Fund_Stock_DF_Cleaned = Fund_Stock[['Ticker Symbol', 'Period Ending', 'Total Equity', 'Cash Ratio']].copy()\n",
-    "Fund_Stock_Exchange.head()"
+    "Fund_Stock_DF_Cleaned = Fund_Stock[['Ticker Symbol', 'Period Ending', 'Total Equity', 'Cash Ratio', 'Total Revenue', 'For Year']]\n",
+    "Fund_Stock_DF_Cleaned.head()"
    ]
   },
   {
@@ -507,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,23 +538,24 @@
     "\n",
     "\n",
     "import psycopg2 as pg2\n",
-    "try:\n",
-    "    conn = pg2.connect(dbname=\"NYSE\", user=\"postgres\", password=\"Google123\")\n",
-    "    cur = conn.cursor()\n",
-    "    cur.execute(\"\"\"\n",
-    "    CREATE TABLE \"securities_DF_Cleaned\"(\n",
-    "    \"Ticker symbol\" text PRIMARY KEY,\n",
-    "    Security text,\n",
-    "    \"GICS Sector\" text);\n",
-    "    \"\"\")\n",
-    "    conn.commit()\n",
-    "except:\n",
-    "    print(\"Unable to Connect\")\n"
+    "#try:\n",
+    "conn = pg2.connect(dbname=\"NYSE\", user = username, password = password)\n",
+    "cur = conn.cursor()\n",
+    "cur.execute(\"\"\"\n",
+    "CREATE TABLE \"Securities\"(\n",
+    "\"Ticker Symbol\" varchar(7) NOT NULL PRIMARY KEY,\n",
+    "\"Security\" text,\n",
+    "\"GICS Sector\" text,\n",
+    "\"GICS Sub Industry\" text);\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "#except:\n",
+    "    #print(\"Unable to Connect\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,14 +564,16 @@
     "\n",
     "import psycopg2 as pg2\n",
     "try:\n",
-    "    conn = pg2.connect(dbname=\"NYSE\", user=\"postgres\", password=\"Google123\")\n",
+    "    conn = pg2.connect(dbname=\"NYSE\", user = username, password = password)\n",
     "    cur = conn.cursor()\n",
     "    cur.execute(\"\"\"\n",
-    "    CREATE TABLE \"Fund_Stock_DF_Cleaned\"(\n",
-    "    \"Ticker Symbol\" text PRIMARY KEY,\n",
-    "    \"Period Ending\" text,\n",
-    "    \"Total Equity\" text,\n",
-    "    \"Cash Ratio\" text);\n",
+    "    CREATE TABLE \"Fund Stock\"(\n",
+    "    \"Ticker Symbol\" varchar(7) REFERENCES \"Securities\"(\"Ticker Symbol\") ,\n",
+    "    \"Period Ending\" date,\n",
+    "    \"Total Equity\" bigint,\n",
+    "    \"Cash Ratio\" decimal,\n",
+    "    \"Total Revenue\" bigint,\n",
+    "    \"For Year\" int);\n",
     "    \"\"\")\n",
     "    conn.commit()\n",
     "except:\n",
@@ -558,11 +582,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_connection_string = \"postgres:Google123@localhost:5432/NYSE\"\n",
+    "rds_connection_string = f\"{username}:{password}@localhost:5432/NYSE\"\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
@@ -575,16 +599,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['securities_DF_Cleaned', 'Fund_Stock_DF_Cleaned']"
+       "['Securities', 'Fund Stock']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,78 +621,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use pandas to load csv converted DataFrame into database"
+    "### Use pandas to load converted DataFrames into database"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "securities_DF_Cleaned.to_sql(name=\"NYSE\", con=engine, if_exists='append', index=False)"
+    "Securities_DF_Cleaned.to_sql(name=\"Securities\", con=engine, if_exists='append', index=False)\n",
+    "\n",
+    "Fund_Stock_DF_Cleaned.to_sql(name=\"Fund Stock\", con=engine, if_exists='append', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use pandas to load json converted DataFrame into database"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Fund_Stock_DF_Cleaned.to_sql(name=\"NYSE\", con=engine, if_exists='append', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Confirm data has been added by querying the customer_name table\n",
+    "### Confirm data has been added by querying the Securities and Fund Stock databases\n",
     "* NOTE: can also check using pgAdmin"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Confirm data has been added by querying the customer_location table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
