Updated directory for CSVs

--- a/PROJECT2_ETL.ipynb
+++ b/PROJECT2_ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4   718877  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,14 +150,14 @@
    "source": [
     "#I used Securities.csv & Fundamentals.csv because the both have a common primary key... \"Ticker symbol\".\n",
     "\n",
-    "csv_file = \"securities.csv\"\n",
+    "csv_file = \"CSVs/securities.csv\"\n",
     "securities = pd.read_csv(csv_file)\n",
     "securities.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -378,7 +378,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,14 +386,14 @@
    "source": [
     "#I used Securities.csv & Fundamentals.csv because the both have a common primary key... \"Ticker symbol\".\n",
     "\n",
-    "csv_file = \"fundamentals.csv\"\n",
+    "csv_file = \"CSVs/fundamentals.csv\"\n",
     "Fund_Stock = pd.read_csv(csv_file)\n",
     "Fund_Stock.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -497,13 +497,13 @@
        "4  1408600.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_file = \"prices.csv\"\n",
+    "csv_file = \"CSVs/prices.csv\"\n",
     "Stock_Prices = pd.read_csv(csv_file)\n",
     "Stock_Prices.head()"
    ]
